# LidarProjectionModule

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  package.xml
.unit_dev/: calibration
.unit_dev/camera_stitching_ws/src/: camera_stitching
.unit_dev/fusion_ws/src/: fusion
.unit_dev/lane_detection_ws/src/: lane_detection
.unit_dev/lidar_processing_ws/src/: lidar_processing
calibration/include/: camera_calibrator.hpp
calibration/include/calibration/: camera_calibrator.hpp
calibration/src/: camera_calibrator.cpp  extrinsic_calibrator.cpp  lidar_calibrator.cpp
calibration/tools/: calibration_node.cpp
camera_stitching/: CMakeLists.txt  package.xml
camera_stitching/cuda/: image_kernels.cu
camera_stitching/include/: camera_synchronizer.hpp  panoramic_stitcher.hpp
camera_stitching/src/: camera_stitching_node.cpp  camera_synchronizer.cpp  panoramic_stitcher.cpp
config/: system_config.yaml
config/camera_params/: camera0.yaml  camera1.yaml  frames.gv
config/lidar_params/: vlp16_0.yaml  vlp16_1.yaml
config/network_params/: yolov8n_seg_lane.yaml
docker/: Dockerfile.dev  Dockerfile.jetson  setup_cross_compile.sh
docs/: Execution_pipeline.txt  creating-unit_dev-module-verification.txt  module_documentation.txt  new_project_structure.txt  project_details.txt  project_structure.txt  roslaunch_commands.txt
fusion/: CMakeLists.txt  package.xml
fusion/src/: lane_fusion_node.cpp  lane_model.cpp  projection.cpp
lane_detection/: CMakeLists.txt  package.xml
lane_detection/cuda/: tensor_kernels.cu
lane_detection/include/: config.hpp  lane_detection.hpp  lane_segmentation.hpp  yolo_detector.hpp
lane_detection/src/: lane_detection_node.cpp  lane_segmentation.cpp  tensor_utils.cpp  yolo_detector.cpp
launch/: lane_detection.launch  sensors.launch  sensors.launch.py
lidar_processing/: CMakeLists.txt  CTestConfiguration.ini  package.xml
lidar_processing/atomic_configure/: .rosinstall.wnvT3  _setup_util.py.S9G8w  local_setup.fish.HXfW0  local_setup.sh.fl2mZ  setup.fish.8B0ln  setup.sh.lt5oW
lidar_processing/catkin_generated/: generate_cached_setup.py  setup_cached.sh
lidar_processing/cuda/: ground_extraction.cu
lidar_processing/include/: point_types.hpp
lidar_processing/include/lidar_processing/: ground_extraction.hpp  point_cloud_proc.hpp  point_types.hpp
lidar_processing/src/: ground_extraction.cpp  lidar_ground_extraction_node.cpp  point_cloud_proc.cpp
scripts/: build.sh  build_pytorch.sh  caliberation_collection.py  checkenv.py  install_pytorch.sh  make_unit_ws.sh  phase3.sh  setup_environment.sh  standalone_build.sh  start_dev_container.sh  status_checker.sh
utils/include/: memory_management.hpp
utils/src/: memory_management.cpp  time_sync.cpp  visualization.cpp
