<?xml version="1.0"?>
<package format="2">
  <name>lidar_projection_lane</name>
  <version>1.0.0</version>
  <description>LiDAR-based ground plane extraction system</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Essential ROS1 dependencies only -->
  <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  
  <!-- System dependencies -->
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  
  <!-- Runtime dependencies (exec_depend for format 2) -->
  <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  
  <export>
  </export>
</package>




<!-- OLDER -->
<!-- <?xml version="1.0"?>
<package format="2">
    <name>lane_fusion</name>
    <version>1.0.0</version>
    <description>Projection-based LiDAR-camera fusion for lane detection</description>

    <maintainer email="dev@lanefusion.com">Lane Fusion Team</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- ROS dependencies -->
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>pcl_ros</depend>
    <depend>velodyne_msgs</depend>
    <depend>message_filters</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

    <!-- System dependencies -->
    <depend>libopencv-dev</depend>
    <depend>libpcl-dev</depend>
    <depend>libeigen3-dev</depend>

    <!-- Build dependencies -->
    <build_depend>cmake</build_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
